21 Day : voice random joke generator

--- a/15thday/index.html
+++ b/15thday/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Text to Speech Converter 🔊 </h1>
-        <p>Type any text and let your brower speck !</p>
+        <p>Type any text and let your browser speak !</p>
     </header>
     <div class="container">
         <textarea id="textInput" placeholder="enter text here....."></textarea>
