--- a/18thday/index.html
+++ b/18thday/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="quiz-container">
-        <h1>Quiz App 🧠</h1>
+        <h1>Day-18 || Quiz App 🧠</h1>
         <div id="question"></div>
         <div id="answers"></div>
         <button id="next-btn">Next</button>
